fix(frontend/ui): remove spacing in "Remember Me"
closes #109

--- a/junction/static/css/app.css
+++ b/junction/static/css/app.css
@@ -8216,6 +8216,9 @@ button.close {
 a.tag {
   color: #fff;
 }
+input#id_remember {
+  margin-left: 0;
+}
 .align-bottom {
   vertical-align: bottom;
 }
