--- a/junction/static/less/ui.less
+++ b/junction/static/less/ui.less
@@ -2,3 +2,7 @@
 a.tag {
     color: #fff;
 }
+
+input#id_remember {
+    margin-left: 0
+}
